# LLM-Guided-RL-in-Quant-Trading

./: .gitignore  AGENTS.md  EXPERIMENT1_LLM_Test_Strategies.ipynb  EXPERIMENT2_LLM4RL.ipynb  poetry.toml  pyproject.toml  requirements.txt
data/prompts/: analyst_prompt_v2.yml  strat_prompt_v1.yml  strat_prompt_v4 copy.yml  strat_prompt_v4.yml  strat_prompt_v5.yml
tests/: test_data_utils.py
utils/: data_utils.py  paper_utils.py  rl_agent_utils.py
