[tool.poetry]
name = "language-model-guided-reinforcement-learning-in-quantitative-trading"
version = "0.1.0"
description = "Research tooling for LLM-guided reinforcement learning strategies in quantitative trading."
authors = ["Adam D <adam@localhost>"]
readme = "README.MD"
packages = [{ include = "utils" }]
include = ["data/prompts/*.yml"]

[tool.poetry.dependencies]
python = "^3.12"
backoff = "2.2.1"
beautifulsoup4 = "4.13.4"
gymnasium = "^1.2.1"
html2text = "2024.2.26"
ib-insync = "0.9.82"
jinja2 = "3.1.6"
matplotlib = "3.8.2"
nltk = "3.9.1"
numpy = "1.26.4"
openai = "1.82.1"
pandas = "2.2.3"
pillow = "11.3.0"
polars = "1.30.0"
pydantic = "2.11.5"
python-dotenv = "1.1.0"
pyyaml = "6.0.2"
requests = "2.32.3"
scikit-learn = "1.4.0"
scipy = "1.11.4"
statsmodels = "0.14.1"
tabulate = "0.9.0"
torch = "2.4.1"
tqdm = "4.66.5"
wordcloud = "1.9.4"
yfinance = "0.2.43"
dotenv = "^0.9.9"
pyarrow = "^21.0.0"
ipywidgets = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-xdist = "^3.6"
ruff = "^0.6.9"
ipykernel = "^7.0.1"

[tool.poetry.group.types.dependencies]
mypy = "^1.11"
types-requests = "^2.32"
types-PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.9"]
build-backend = "poetry.core.masonry.api"